Building concepts and some more job concepts, refactored ai auth tags

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -89,16 +89,26 @@
 
  job_politician:0 "Politician"
  job_politician_plural:0 "Politicians"
- job_politician_desc:0 "The goverment of an entire planet is a daunting task that requires dedicated and highly trained individuals."
- job_politician_effect_desc:0 "£job_politician£ $job_politician_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_amenities$§!"
+ job_politician_desc:0 "The government of an entire planet is a daunting task that requires dedicated and highly trained individuals."
+ job_politician_effect_desc:0 "['concept_tec_job_politician_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_amenities$§!"
+
+ job_executive_effect_desc:2 "['concept_tec_job_executive_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_trade_value$§!"
 
  job_merchant:0 "Merchant"
  job_merchant_plural:0 "Merchants"
  job_merchant_desc:1 "They buy. They sell. They hoard. They re-sell. Agents, dealers, retailers, wholesalers - wherever there is trade, there are merchants."
- job_merchant_effect_desc:1 "£job_merchant£ $job_merchant_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_trade_value$§!"
+ job_merchant_effect_desc:1 "['concept_tec_job_merchant_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_amenities$§! and §Y$tec_loc_trade_value$§!"
  mod_job_merchant_add:0 "$job_merchant$ Jobs"
  mod_job_merchant_per_pop:0 "§G+1§! $job_merchant$ Job per $VALUE$ Pops"
  mod_job_merchant_per_pop_short:0 "\n§G+1§! £mod_job_merchant_add£ per $VALUE$ £pop£"
+
+ job_noble_effect_desc:2 "['concept_tec_job_noble_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_stability$§!"
+
+ job_head_researcher_effect_desc:2 "['concept_tec_job_head_researcher_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into £unity£ §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_research_resources$§!"
+
+ job_high_priest_effect_desc:1 "['concept_tec_job_high_priest_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_amenities$§!"
+
+ job_bureaucrat_effect_desc:1 "['concept_tec_job_bureaucrat_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_edict_capacity$§!"
 
  job_coordinator:0 "Coordinator"
  job_coordinator_plural:0 "Coordinators"
@@ -108,9 +118,9 @@
  mod_job_coordinator_per_pop:0 "§G+1§! $job_coordinator$ Job per $VALUE$ Pops"
  mod_job_coordinator_per_pop_short:0 "\n§G+1§! £mod_job_coordinator_add£ per $VALUE$ £pop£"
 
- job_synapse_drone_effect_desc:4 "£job_synapse_drone£ $job_synapse_drone_plural$ turn §Y$tec_loc_energy$§! and [Owner.GetTecSynapseDroneUpkeep] into §Y$tec_loc_unity$§! and £mod_country_edict_fund_add£ §YEdict Capacity§!." 
+ job_synapse_drone_effect_desc:4 "£job_synapse_drone£ $job_synapse_drone_plural$ turn §Y$tec_loc_energy$§! and [Owner.GetTecSynapseDroneUpkeep] into §Y$tec_loc_unity$§! and §Y$tec_loc_edict_capacity$§!." 
 
- job_brain_drone_effect_desc:0 "£job_brain_drone£ $job_brain_drone_plural$ turn [owner.GetTecBrainDroneUpkeep] into £trigger_tec_research£ §YResearch Points§! for new technologies"
+ job_brain_drone_effect_desc:0 "£job_brain_drone£ $job_brain_drone_plural$ turn [owner.GetTecBrainDroneUpkeep] into §Y$tec_loc_research_resources$§! for new technologies"
 
  job_spawning_drone_effect_desc:2 "[job_spawning_drone_effect_desc]"
  job_spawning_drone_effect_default_desc: "£job_spawning_drone£ $job_spawning_drone_plural$ convert [Owner.tec_spawning_drone_upkeep] into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and §Y$tec_loc_biological_assembly$§!"
