--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -336,6 +336,132 @@
 	concept_tec_job_tec_social_worker_plural: "$job_tec_social_worker_plural$"
 	concept_tec_job_tec_social_workere_plural_icon: "£job_tec_social_worker£ $job_tec_social_worker_plural$"
 	concept_tec_job_tec_social_worker_desc: "TODO"
+
+	# AI Auth Jobs
+	concept_tec_job_tec_ai_ordinator: "$job_tec_ai_ordinator$"
+	concept_tec_job_tec_ai_ordinator_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator$"
+	concept_tec_job_tec_ai_ordinator_plural: "$job_tec_ai_ordinator_plural$"
+	concept_tec_job_tec_ai_ordinator_plural_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator_plural$"
+	concept_tec_job_tec_ai_ordinator_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_capacity$: §G+2§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 2§!\nUpkeep: §Y£trigger_tec_research£ 1§!"
+
+  concept_tec_job_tec_ai_ordinator_megacorp: "$job_tec_ai_ordinator$"
+	concept_tec_job_tec_ai_ordinator_megacorp_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator$"
+	concept_tec_job_tec_ai_ordinator_megacorp_plural: "$job_tec_ai_ordinator_plural$"
+	concept_tec_job_tec_ai_ordinator_megacorp_plural_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator_plural$"
+	concept_tec_job_tec_ai_ordinator_megacorp_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 2§!\nUpkeep: §Y£trigger_tec_research£ 1§!"
+
+	concept_tec_job_tec_ai_operator: "$job_tec_ai_operator$"
+	concept_tec_job_tec_ai_operator_icon: "£job_tec_ai_operator£ $job_tec_ai_operator$"
+	concept_tec_job_tec_ai_operator_plural: "$job_tec_ai_operator_plural$"
+	concept_tec_job_tec_ai_operator_plural_icon: "£job_tec_ai_operator£ $job_tec_ai_operator_plural$"
+	concept_tec_job_tec_ai_operator_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_capacity$: §G+2§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 2§!\nUpkeep: §Y£trigger_tec_research£ 1§!"
+
+	concept_tec_job_tec_ai_operator_megacorp: "$job_tec_ai_operator$"
+	concept_tec_job_tec_ai_operator_megacorp_icon: "£job_tec_ai_operator£ $job_tec_ai_operator$"
+	concept_tec_job_tec_ai_operator_megacorp_plural: "$job_tec_ai_operator_plural$"
+	concept_tec_job_tec_ai_operator_megacorp_plural_icon: "£job_tec_ai_operator£ $job_tec_ai_operator_plural$"
+	concept_tec_job_tec_ai_operator_megacorp_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 2§!\nUpkeep: §Y£trigger_tec_research£ 1§!"
+
+	concept_tec_job_tec_ai_computator: "$job_tec_ai_computator$"
+	concept_tec_job_tec_ai_computator_icon: "£job_tec_ai_computator£ $job_tec_ai_computator$"
+	concept_tec_job_tec_ai_computator_plural: "$job_tec_ai_computator_plural$"
+	concept_tec_job_tec_ai_computator_plural_icon: "£job_tec_ai_computator£ $job_tec_ai_computator_plural$"
+	concept_tec_job_tec_ai_computator_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\nProduces: §Y£unity£ 6 £sr_tec_ai_power£ 5§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	concept_tec_job_tec_ai_computator_megacorp: "$job_tec_ai_computator$"
+	concept_tec_job_tec_ai_computator_megacorp_icon: "£job_tec_ai_computator£ $job_tec_ai_computator$"
+	concept_tec_job_tec_ai_computator_megacorp_plural: "$job_tec_ai_computator_plural$"
+	concept_tec_job_tec_ai_computator_megacorp_plural_icon: "£job_tec_ai_computator£ $job_tec_ai_computator_plural$"
+	concept_tec_job_tec_ai_computator_megacorp_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$tec_loc_trade_value$: §G+6§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 5§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	concept_tec_job_tec_ai_high_ordinator: "$job_tec_ai_high_ordinator$"
+	concept_tec_job_tec_ai_high_ordinator_icon: "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator$"
+	concept_tec_job_tec_ai_high_ordinator_plural: "$job_tec_ai_high_ordinator_plural$"
+	concept_tec_job_tec_ai_high_ordinator_plural_icon: "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator_plural$"
+	concept_tec_job_tec_ai_high_ordinator_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+5§!\nProduces: §Y£unity£ 7 £sr_tec_ai_power£ 5§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	concept_tec_job_tec_ai_high_ordinator_megacorp: "$job_tec_ai_high_ordinator$"
+	concept_tec_job_tec_ai_high_ordinator_megacorp_icon: "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator$"
+	concept_tec_job_tec_ai_high_ordinator_megacorp_plural: "$job_tec_ai_high_ordinator_plural$"
+	concept_tec_job_tec_ai_high_ordinator_megacorp_plural_icon: "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator_plural$"
+	concept_tec_job_tec_ai_high_ordinator_megacorp_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+5§!\n$tec_loc_trade_value$: §G+6§!\nProduces: §Y£unity£ 5 £sr_tec_ai_power£ 5§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	# Politicians
+	concept_tec_job_politician: "$job_politician$"
+	concept_tec_job_politician_icon: "£job_politician£ $job_politician$"
+	concept_tec_job_politician_plural: "$job_politician_plural$"
+	concept_tec_job_politician_plural_icon: "£job_politician£ $job_politician_plural$"
+	concept_tec_job_politician_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	concept_tec_job_executive: "$job_executive$"
+	concept_tec_job_executive_icon: "£job_executive£ $job_executive$"
+	concept_tec_job_executive_plural: "$job_executive_plural$"
+	concept_tec_job_executive_plural_icon: "£job_executive£ $job_executive_plural$"
+	concept_tec_job_executive_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$tec_loc_trade_value$: §G+4§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	concept_tec_job_merchant: "$job_merchant$"
+	concept_tec_job_merchant_icon: "£job_merchant£ $job_merchant$"
+	concept_tec_job_merchant_plural: "$job_merchant_plural$"
+	concept_tec_job_merchant_plural_icon: "£job_merchant£ $job_merchant_plural$"
+	concept_tec_job_merchant_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$tec_loc_trade_value$: §G+12§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+  concept_tec_job_noble: "$job_noble$"
+	concept_tec_job_noble_icon: "£job_noble£ $job_noble$"
+	concept_tec_job_noble_plural: "$job_noble_plural$"
+	concept_tec_job_noble_plural_icon: "£job_noble£ $job_noble_plural$"
+	concept_tec_job_noble_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\n$tec_loc_stability$: §G+4§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+  concept_tec_job_head_researcher: "$job_head_researcher$"
+	concept_tec_job_head_researcher_icon: "£job_head_researcher£ $job_head_researcher$"
+	concept_tec_job_head_researcher_plural: "$job_head_researcher_plural$"
+	concept_tec_job_head_researcher_plural_icon: "£job_head_researcher£ $job_head_researcher_plural$"
+	concept_tec_job_head_researcher_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+3§!\nProduces: §Y£unity£ 2 £trigger_tec_research£ 6§!\nUpkeep: §Y£consumer_goods£ 3§!"
+
+	concept_tec_job_high_priest: "$job_high_priest$"
+	concept_tec_job_high_priest_icon: "£job_high_priest£ $job_high_priest$"
+	concept_tec_job_high_priest_plural: "$job_high_priest_plural$"
+	concept_tec_job_high_priest_plural_icon: "£job_high_priest£ $job_high_priest_plural$"
+	concept_tec_job_high_priest_desc: "Stratum: §Y$pop_cat_ruler$§!\n$tec_loc_amenities$: §G+5§!\nProduces: §Y£unity£ 7§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	# Bureaucrats
+
+	concept_tec_job_bureaucrat: "$job_bureaucrat$"
+	concept_tec_job_bureaucrat_icon: "£job_bureaucrat£ $job_bureaucrat$"
+	concept_tec_job_bureaucrat_plural: "$job_bureaucrat_plural$"
+	concept_tec_job_bureaucrat_plural_icon: "£job_bureaucrat£ $job_bureaucrat_plural$"
+	concept_tec_job_bureaucrat_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_capacity$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	concept_tec_job_manager: "$job_manager$"
+	concept_tec_job_manager_icon: "£job_manager£ $job_manager$"
+	concept_tec_job_manager_plural: "$job_manager_plural$"
+	concept_tec_job_manager_plural_icon: "£job_manager£ $job_manager_plural$"
+	concept_tec_job_manager_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_capacity$: §G+2§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
+# /
+
+## Buildings
+	concept_tec_building_bureaucratic_1: "$building_bureaucratic_1$"
+	concept_tec_building_bureaucratic_1_icon: "£building£ $building_bureaucratic_1$"
+	concept_tec_building_bureaucratic_1_desc: "£mod_job_bureaucrat_add£ $mod_job_bureaucrat_add$: §G+2§!\n\n$job_bureaucrat_effect_desc$"
+
+	concept_tec_building_bureaucratic_1_megacorp: "$building_bureaucratic_1$"
+	concept_tec_building_bureaucratic_1_megacorp_icon: "£building£ $building_bureaucratic_1$"
+	concept_tec_building_bureaucratic_1_megacorp_desc: "£mod_job_manager_add£ $mod_job_manager_add$: §G+2§!\n\n$job_manager_effect_desc$"
+
+	concept_tec_building_tec_aiauth_1: "$building_tec_aiauth_1$"
+	concept_tec_building_tec_aiauth_1_icon: "£building£ $building_tec_aiauth_1$"
+	concept_tec_building_tec_aiauth_1_desc: "£mod_job_coordinator_add£ $mod_job_tec_ai_operator_add$: §G+2§!\n\n$job_tec_ai_operator_effect_desc$"
+
+	concept_tec_building_tec_aiauth_1_spiritualist: "$building_tec_aiauth_1$"
+	concept_tec_building_tec_aiauth_1_spiritualist_icon: "£building£ $building_tec_aiauth_1$"
+	concept_tec_building_tec_aiauth_1_spiritualist_desc: "£mod_job_coordinator_add£ $mod_job_tec_ai_ordinator_add$: §G+2§!\n\n$job_tec_ai_ordinator_effect_desc$"
+
+	concept_tec_building_tec_planetary_node_center: "$building_tec_planetary_node_center$"
+	concept_tec_building_tec_planetary_node_center_icon: "£building£ $building_tec_planetary_node_center$"
+	concept_tec_building_tec_planetary_node_center_desc: "£mod_job_tec_ai_computator_add£ $mod_job_tec_ai_computator_add$: §G+1§!\n£mod_job_coordinator_add£ $mod_job_tec_ai_operator_add$: §G+1§!\n\n$job_tec_ai_computator_effect_desc$\n$job_tec_ai_operator_effect_desc$"
+
+	concept_tec_building_tec_planetary_node_center_spiritualist: "$building_tec_planetary_node_center$"
+	concept_tec_building_tec_planetary_node_center_spiritualist_icon: "£building£ $building_tec_planetary_node_center$"
+	concept_tec_building_tec_planetary_node_center_spiritualist_desc: "£mod_job_tec_ai_high_ordinator_add£ $mod_job_tec_ai_high_ordinator_add$: §G+1§!\n£mod_job_coordinator_add£ $mod_job_tec_ai_ordinator_add$: §G+1§!\n\n$job_tec_ai_high_ordinator_effect_desc$\n$job_tec_ai_ordinator_effect_desc$"
 # /
 
 ## Districts
@@ -1091,3 +1217,19 @@
  # /
 # /
 
+# AI Auths
+	concept_tec_sr_tec_ai_power: "$tec_loc_sr_tec_ai_power$"
+	concept_tec_sr_tec_ai_power_desc: "$sr_tec_ai_power$ is a resource specific to ['concept_tec_authority_type_ai_auth'] Type Authorities used for the upkeep of ['concept_tec_ai_nodes_icon'] and any remaining $sr_tec_ai_power$ after the upkeeps are handled gets converted into experience for your AI Leader Nodes. It is usually created by ['concept_tec_job_tec_ai_ordinator_plural_icon'] and ['concept_tec_job_tec_ai_ordinator_plural']."
+	
+	concept_tec_ai_node: "AI Leader Node"
+  concept_tec_ai_nodes: "AI Leader Nodes"
+  concept_tec_ai_node_icon: "£tec_ai_node£ AI Leader Node"
+  concept_tec_ai_nodes_icon: "£tec_ai_node£ AI Leader Nodes"
+  concept_tec_ai_node_desc: "$concept_tec_ai_node$ are a type of leader specific to ['concept_tec_authority_type_ai_auth'] Type Authorities that do not take up §YLeader Capacity§! and use ['concept_tec_sr_tec_ai_power'] as upkeep instead of ['concept_unity'].\n\nThe remaining §Y$tec_loc_sr_tec_ai_power$§! income after upkeeps is converted to experience, depending on each node's ['concept_tec_ai_node_weight'], which can be influenced by §YPolicies§!."
+
+	concept_tec_ai_node_weight: "AI Node Weight"
+  concept_tec_ai_node_weight_desc: "AI Node Weight represents the weight of each node, aka the proportion of the available §Y$tec_loc_sr_tec_ai_power$§! that the notes takes to convert to experience."
+
+	concept_tec_ai_fragment: "Fragment"
+	concept_tec_ai_fragment_desc: "Fragmenting in the operation of splitting the §Y$tec_loc_ai_ruler_node$§! into and auxiliary §Y$tec_loc_ai_councilor_node$§! for the purpose of filling Council Positions.\n\nFragmenting new AI Nodes, is done from the §YGovernment Screen§! by hovering over the Ruler council slot."
+# /
