--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -68,6 +68,8 @@
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
 
+	tec_loc_edict_capacity: "£mod_country_edict_fund_add£ Edict Capacity"
+
 	tec_loc_sr_tec_ai_power: "£sr_tec_ai_power£ $sr_tec_ai_power$"
 
 	tec_loc_robot_assembly_add: "£job_roboticist£ Robot Assembly"
