--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -367,15 +367,15 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_computator:0 "Computator"
  job_tec_ai_computator_plural:0 "Computators"
  job_tec_ai_computator_desc:0 "Computators are experienced members of the ruling class dedicated to serve and operate the orders and functions of its empire AI."
- job_tec_ai_computator_effect_desc:0 "£job_tec_ai_computator£ $job_tec_ai_computator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!."
+ job_tec_ai_computator_effect_desc:0 "['concept_tec_job_tec_ai_computator_plural_icon'] use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_sr_tec_ai_power$§!"
  mod_job_tec_ai_computator_per_pop:0 "§G+1§! $job_tec_ai_computator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_computator_per_pop_short:0 "\n§G+1§! £job_tec_ai_computator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_computator_add:0 "$job_tec_ai_computator$ Jobs"
 
  job_tec_ai_operator:0 "Operator"
  job_tec_ai_operator_plural:0 "Operators"
- job_tec_ai_operator_desc:0 "Operators ensure the correct functioning of the AI terminals on each planet, ."
- job_tec_ai_operator_effect_desc:0 "£job_tec_ai_operator£ $job_tec_ai_operator_plural$ convert £trigger_tec_research£ §YResearch§! into §Y$tec_loc_unity$§!, while also increasing £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!"
+ job_tec_ai_operator_desc:0 "Operators ensure the correct functioning of the AI terminals on each planet."
+ job_tec_ai_operator_effect_desc:0 "['concept_tec_job_tec_ai_operator_plural_icon'] convert §Y$tec_loc_research_resources$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_sr_tec_ai_power$§!"
  mod_job_tec_ai_operator_per_pop:0 "§G+1§! $job_tec_ai_operator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_operator_per_pop_short:0 "\n§G+1§! £job_tec_ai_operator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_operator_add:0 "$job_tec_ai_operator$ Jobs"
@@ -383,7 +383,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_high_ordinator:0 "High Ordinator"
  job_tec_ai_high_ordinator_plural:0 "High Ordinators"
  job_tec_ai_high_ordinator_desc:0 "Serving the faith and the doctrines promulgated by its ruling AI, the highest rank of Ordinators ensure both are streamlined and well tuned."
- job_tec_ai_high_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§! and £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!."
+ job_tec_ai_high_ordinator_effect_desc:0 "['concept_tec_job_tec_ai_high_ordinator_plural_icon'] use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_sr_tec_ai_power$§!."
  mod_job_tec_ai_high_ordinator_per_pop:0 "§G+1§! $job_tec_ai_high_ordinator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_high_ordinator_per_pop_short:0 "\n§G+1§! £job_tec_ai_high_ordinator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_high_ordinator_add:0 "$job_tec_ai_high_ordinator$ Jobs"
@@ -391,27 +391,10 @@ tec_jump_empty:0 "\n\n"
  job_tec_ai_ordinator:0 "Ordinator"
  job_tec_ai_ordinator_plural:0 "Ordinators"
  job_tec_ai_ordinator_desc:0 "Ordinators manage both bureaucratic and spiritual issues by transcribing and serving the purpose of the main divine AI."
- job_tec_ai_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_ordinator_plural$ convert £trigger_tec_research£ §YResearch§! into §Y$tec_loc_unity$§!, while also increasing £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!"
+ job_tec_ai_ordinator_effect_desc:0 "['concept_tec_job_tec_ai_ordinator_plural_icon'] convert §Y$tec_loc_research_resources$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_sr_tec_ai_power$§!"
  mod_job_tec_ai_ordinator_per_pop:0 "§G+1§! $job_tec_ai_ordinator$ Job Per $VALUE$ Pops"
  mod_job_tec_ai_ordinator_per_pop_short:0 "\n§G+1§! £job_tec_ai_ordinator_add£ per $VALUE$ £pop£"
  mod_job_tec_ai_ordinator_add:0 "$job_tec_ai_ordinator$ Jobs"
-
-
- job_tec_ai_computator:0 "Computator"
- job_tec_ai_computator_plural:0 "Computators"
- job_tec_ai_computator_desc:0 "Computators are experienced members of the ruling class dedicated to serve and operate the orders and functions of its empire AI."
- job_tec_ai_computator_effect_desc:0 "£job_tec_ai_computator£ $job_tec_ai_computator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§!, §Y$tec_loc_trade_value$§! and £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!."
- mod_job_tec_ai_computator_per_pop:0 "§G+1§! $job_tec_ai_computator$ Job Per $VALUE$ Pops"
- mod_job_tec_ai_computator_per_pop_short:0 "\n§G+1§! £job_tec_ai_computator_add£ per $VALUE$ £pop£"
- mod_job_tec_ai_computator_add:0 "$job_tec_ai_computator$ Jobs"
-
- job_tec_ai_high_ordinator:0 "High Ordinator"
- job_tec_ai_high_ordinator_plural:0 "High Ordinators"
- job_tec_ai_high_ordinator_desc:0 "Serving the faith and the doctrines promulgated by its ruling AI, the highest rank of Ordinators ensure both are streamlined and well tuned."
- job_tec_ai_high_ordinator_effect_desc:0 "£job_tec_ai_high_ordinator£ $job_tec_ai_high_ordinator_plural$ use $tec_loc_consumer_goods$ to produce §Y$tec_loc_unity$§!, £amenities£ §YAmenities§!, §Y$tec_loc_trade_value$§! and £sr_tec_ai_power£ §Y$sr_tec_ai_power$§!."
- mod_job_tec_ai_high_ordinator_per_pop:0 "§G+1§! $job_tec_ai_high_ordinator$ Job Per $VALUE$ Pops"
- mod_job_tec_ai_high_ordinator_per_pop_short:0 "\n§G+1§! £job_tec_ai_high_ordinator_add£ per $VALUE$ £pop£"
- mod_job_tec_ai_high_ordinator_add:0 "$job_tec_ai_high_ordinator$ Jobs"
 
 # ------------------------------------------------- Pending
  job_tec_high_inquisitor:0 "High Inquisitor"
