preparation for gestalt ethic policies

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -656,6 +656,122 @@
 		policy_option_fanatic_tec_pluralist_C_name:0 "$policy_option_tec_pluralist_C$"
 		policy_option_fanatic_tec_pluralist_C_desc:0 "$policy_option_tec_pluralist_C_desc$"
 
+		#- Gestalt Empathy
+		# /
+		policy_tec_gestalt_empathy_ethic_policy:0 "$ethic_gestalt_empathy$ Ethic Policy"
+		policy_tec_gestalt_empathy_policy_desc:0 "We are not alone in the universe, all creatures, no matter within our collective or outside it, deserve our kindness."
+
+		policy_option_tec_gestalt_empathy_A:0 "$ethic_gestalt_empathy_adj$ AAAA"
+		policy_option_tec_gestalt_empathy_A_name:0 "$policy_option_tec_gestalt_empathy_A$"
+		policy_option_tec_gestalt_empathy_A_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic AAAA§!§!"
+
+		policy_option_fanatic_tec_gestalt_empathy_A:0 "$policy_option_tec_gestalt_empathy_A$"
+		policy_option_fanatic_tec_gestalt_empathy_A_name:0 "$policy_option_tec_gestalt_empathy_A$"
+		policy_option_fanatic_tec_gestalt_empathy_A_desc:0 "$policy_option_tec_gestalt_empathy_A_desc$"
+
+		policy_option_tec_gestalt_empathy_B:0 "$ethic_gestalt_empathy_adj$ BBBB"
+		policy_option_tec_gestalt_empathy_B_name:0 "$policy_option_tec_gestalt_empathy_B$"
+		policy_option_tec_gestalt_empathy_B_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic BBBB§!§!"
+
+		policy_option_fanatic_tec_gestalt_empathy_B:0 "$policy_option_tec_gestalt_empathy_B$"
+		policy_option_fanatic_tec_gestalt_empathy_B_name:0 "$policy_option_tec_gestalt_empathy_B$"
+		policy_option_fanatic_tec_gestalt_empathy_B_desc:0 "$policy_option_tec_gestalt_empathy_B_desc$"
+
+		policy_option_tec_gestalt_empathy_C:0 "$ethic_gestalt_empathy_adj$ Embrace"
+		policy_option_tec_gestalt_empathy_C_name:0 "$policy_option_tec_gestalt_empathy_C$"
+		policy_option_tec_gestalt_empathy_C_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic Welcoming§!§!"
+
+		policy_option_fanatic_tec_gestalt_empathy_C:0 "$policy_option_tec_gestalt_empathy_C$"
+		policy_option_fanatic_tec_gestalt_empathy_C_name:0 "$policy_option_tec_gestalt_empathy_C$"
+		policy_option_fanatic_tec_gestalt_empathy_C_desc:0 "$policy_option_tec_gestalt_empathy_C_desc$"
+
+		#- Gestalt Apathy
+		# /
+		policy_tec_gestalt_apathy_ethic_policy:0 "$ethic_gestalt_apathy$ Ethic Policy"
+		policy_tec_gestalt_apathy_policy_desc:0 "We are not alone in the universe, all creatures, no matter within our collective or outside it, deserve our kindness."
+
+		policy_option_tec_gestalt_apathy_A:0 "$ethic_gestalt_apathy_adj_adj$ AAAA"
+		policy_option_tec_gestalt_apathy_A_name:0 "$policy_option_tec_gestalt_apathy_A$"
+		policy_option_tec_gestalt_apathy_A_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic AAAA§!§!"
+
+		policy_option_fanatic_tec_gestalt_apathy_A:0 "$policy_option_tec_gestalt_apathy_A$"
+		policy_option_fanatic_tec_gestalt_apathy_A_name:0 "$policy_option_tec_gestalt_apathy_A$"
+		policy_option_fanatic_tec_gestalt_apathy_A_desc:0 "$policy_option_tec_gestalt_apathy_A_desc$"
+
+		policy_option_tec_gestalt_apathy_B:0 "$ethic_gestalt_apathy_adj$ BBBB"
+		policy_option_tec_gestalt_apathy_B_name:0 "$policy_option_tec_gestalt_apathy_B$"
+		policy_option_tec_gestalt_apathy_B_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic BBBB§!§!"
+
+		policy_option_fanatic_tec_gestalt_apathy_B:0 "$policy_option_tec_gestalt_apathy_B$"
+		policy_option_fanatic_tec_gestalt_apathy_B_name:0 "$policy_option_tec_gestalt_apathy_B$"
+		policy_option_fanatic_tec_gestalt_apathy_B_desc:0 "$policy_option_tec_gestalt_apathy_B_desc$"
+
+		policy_option_tec_gestalt_apathy_C:0 "$ethic_gestalt_apathy_adj$ Embrace"
+		policy_option_tec_gestalt_apathy_C_name:0 "$policy_option_tec_gestalt_apathy_C$"
+		policy_option_tec_gestalt_apathy_C_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic Welcoming§!§!"
+
+		policy_option_fanatic_tec_gestalt_apathy_C:0 "$policy_option_tec_gestalt_apathy_C$"
+		policy_option_fanatic_tec_gestalt_apathy_C_name:0 "$policy_option_tec_gestalt_apathy_C$"
+		policy_option_fanatic_tec_gestalt_apathy_C_desc:0 "$policy_option_tec_gestalt_apathy_C_desc$"
+
+		#- Gestalt Preservation
+		# /
+		policy_tec_gestalt_preservation_ethic_policy:0 "$ethic_gestalt_preservation$ Ethic Policy"
+		policy_tec_gestalt_preservation_policy_desc:0 "We are not alone in the universe, all creatures, no matter within our collective or outside it, deserve our kindness."
+
+		policy_option_tec_gestalt_preservation_A:0 "$ethic_gestalt_preservation_adj$ AAAA"
+		policy_option_tec_gestalt_preservation_A_name:0 "$policy_option_tec_gestalt_preservation_A$"
+		policy_option_tec_gestalt_preservation_A_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic AAAA§!§!"
+
+		policy_option_fanatic_tec_gestalt_preservation_A:0 "$policy_option_tec_gestalt_preservation_A$"
+		policy_option_fanatic_tec_gestalt_preservation_A_name:0 "$policy_option_tec_gestalt_preservation_A$"
+		policy_option_fanatic_tec_gestalt_preservation_A_desc:0 "$policy_option_tec_gestalt_preservation_A_desc$"
+
+		policy_option_tec_gestalt_preservation_B:0 "$ethic_gestalt_preservation_adj$ BBBB"
+		policy_option_tec_gestalt_preservation_B_name:0 "$policy_option_tec_gestalt_preservation_B$"
+		policy_option_tec_gestalt_preservation_B_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic BBBB§!§!"
+
+		policy_option_fanatic_tec_gestalt_preservation_B:0 "$policy_option_tec_gestalt_preservation_B$"
+		policy_option_fanatic_tec_gestalt_preservation_B_name:0 "$policy_option_tec_gestalt_preservation_B$"
+		policy_option_fanatic_tec_gestalt_preservation_B_desc:0 "$policy_option_tec_gestalt_preservation_B_desc$"
+
+		policy_option_tec_gestalt_preservation_C:0 "$ethic_gestalt_preservation_adj$ Embrace"
+		policy_option_tec_gestalt_preservation_C_name:0 "$policy_option_tec_gestalt_preservation_C$"
+		policy_option_tec_gestalt_preservation_C_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic Welcoming§!§!"
+
+		policy_option_fanatic_tec_gestalt_preservation_C:0 "$policy_option_tec_gestalt_preservation_C$"
+		policy_option_fanatic_tec_gestalt_preservation_C_name:0 "$policy_option_tec_gestalt_preservation_C$"
+		policy_option_fanatic_tec_gestalt_preservation_C_desc:0 "$policy_option_tec_gestalt_preservation_C_desc$"
+
+		#- Gestalt Overconsumption
+		# /
+		policy_tec_gestalt_overconsumption_ethic_policy:0 "$ethic_gestalt_overconsumption$ Ethic Policy"
+		policy_tec_gestalt_overconsumption_policy_desc:0 "We are not alone in the universe, all creatures, no matter within our collective or outside it, deserve our kindness."
+
+		policy_option_tec_gestalt_overconsumption_A:0 "$ethic_gestalt_overconsumption_adj$ AAAA"
+		policy_option_tec_gestalt_overconsumption_A_name:0 "$policy_option_tec_gestalt_overconsumption_A$"
+		policy_option_tec_gestalt_overconsumption_A_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic AAAA§!§!"
+
+		policy_option_fanatic_tec_gestalt_overconsumption_A:0 "$policy_option_tec_gestalt_overconsumption_A$"
+		policy_option_fanatic_tec_gestalt_overconsumption_A_name:0 "$policy_option_tec_gestalt_overconsumption_A$"
+		policy_option_fanatic_tec_gestalt_overconsumption_A_desc:0 "$policy_option_tec_gestalt_overconsumption_A_desc$"
+
+		policy_option_tec_gestalt_overconsumption_B:0 "$ethic_gestalt_overconsumption_adj$ BBBB"
+		policy_option_tec_gestalt_overconsumption_B_name:0 "$policy_option_tec_gestalt_overconsumption_B$"
+		policy_option_tec_gestalt_overconsumption_B_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic BBBB§!§!"
+
+		policy_option_fanatic_tec_gestalt_overconsumption_B:0 "$policy_option_tec_gestalt_overconsumption_B$"
+		policy_option_fanatic_tec_gestalt_overconsumption_B_name:0 "$policy_option_tec_gestalt_overconsumption_B$"
+		policy_option_fanatic_tec_gestalt_overconsumption_B_desc:0 "$policy_option_tec_gestalt_overconsumption_B_desc$"
+
+		policy_option_tec_gestalt_overconsumption_C:0 "$ethic_gestalt_overconsumption_adj$ CCC"
+		policy_option_tec_gestalt_overconsumption_C_name:0 "$policy_option_tec_gestalt_overconsumption_C$"
+		policy_option_tec_gestalt_overconsumption_C_desc:0 "TO DO.\n\n§EThis policy is focused on §HEmpathic Welcoming§!§!"
+
+		policy_option_fanatic_tec_gestalt_overconsumption_C:0 "$policy_option_tec_gestalt_overconsumption_C$"
+		policy_option_fanatic_tec_gestalt_overconsumption_C_name:0 "$policy_option_tec_gestalt_overconsumption_C$"
+		policy_option_fanatic_tec_gestalt_overconsumption_C_desc:0 "$policy_option_tec_gestalt_overconsumption_C_desc$"
+
 		#GESTALT:
 		#- Apathy
 		#	> Remove edict funds
