--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -492,18 +492,39 @@ TEC_TAG_BONUS: "§HBonus:§!"
 
 #phile
 	ethic_gestalt_empathy:0 "Empathy"
+	ethic_gestalt_empathy_plural:0 "Empathic"
+	ethic_gestalt_empathy_minor:0 "empathy"
+	ethic_gestalt_empathy_minor_plural:0 "empathic"
+	ethic_gestalt_empathy_adj:0 "Empathic"
+	ethic_gestalt_empathy_adj_minor:0 "empathic"
 	ethic_gestalt_empathy_desc:0 "§BGestalt Xenophile Motivation§!\n\n§HIf the collective has the adequate technology researched, and the £consumer_goods£ necessary resources, it can host non-gestalt £pops£ pops, which would increase the planet £unity£ §EUnity§! and £pops£ §EDrone Output§!, or serve as §EMenial Workers§!.§!\n\n§LThis gestalt consciousness cares about other space-faring beings in the universe, being curious and driven to share with other sentient beings, no matter how they live or though, to understand how other minds work.§!" 
 
 #phobe
 	ethic_gestalt_apathy:0 "Apathy"
+	ethic_gestalt_apathy_plural:0 "Apathetic"
+	ethic_gestalt_apathy_minor:0 "apathy"
+	ethic_gestalt_apathy_minor_plural:0 "apathetic"
+	ethic_gestalt_apathy_adj:0 "Apathetic"
+	ethic_gestalt_apathy_adj_minor:0 "apathetic"
 	ethic_gestalt_apathy_desc:0 "§BGestalt Isolationist Motivation§!\n\n§LThis gestalt consciousness is indifferent to other space-faring beings but its own; anything outside the reach of it's vast thought is a mere annoyance and anything on it's path is a obstacle to either ignore, or remove.§!\n" 
 
 #eco
 	ethic_gestalt_preservation:0 "Preservation"
+	ethic_gestalt_preservation_plural:0 "Preservation"
+	ethic_gestalt_preservation_minor:0 "preservation"
+	ethic_gestalt_preservation_minor_plural:0 "preservation"
+	ethic_gestalt_preservation_adj:0 "Preserving"
+	ethic_gestalt_preservation_adj_minor:0 "preserving"
 	ethic_gestalt_preservation_desc:0 "§BGestalt Ecologic Motivation§!\n\n§HThis gestalt consciousness can benefit greatly from uncleared blockers and deposits, generating extra jobs and providing bonuses; clearing blockers generate special deposits.§!\n\n§LFor this gestalt consciousness, every part of the universe is a gift, a natural source of development and a valuable asset that must be maintained and used carefully.§!" 
 
 #industr
 	ethic_gestalt_disregard:0 "Overconsumption"
+	ethic_gestalt_overconsumption:0 "Overconsumption"
+	ethic_gestalt_overconsumption_plural:0 "Overconsumption"
+	ethic_gestalt_overconsumption_minor:0 "Overconsuming"
+	ethic_gestalt_overconsumption_minor_plural:0 "overconsuming"
+	ethic_gestalt_overconsumption_adj:0 "Overconsuming"
+	ethic_gestalt_overconsumption_adj_minor:0 "overconsuming"
 	ethic_gestalt_disregard_desc:0 "§BGestalt Industrial Motivation§!\n\n§HThis gestalt consciousness can enact resource decisions on habitable planets, increasing the production of a certain resource while greatly decreasing the production of others by radically altering the planet surface, producing additional blockers.§!\n\n§LThere is no unusable medium or unprofitable tool for this gestalt consciousness, everything is a resource to be used for growth and improvement, no matter the cost.§!" 
 	# Disregard, Production, Overconsumption
 
