gestalt ethic changes + some more things

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -80,6 +80,9 @@
 	tec_tooltip_regular_mechanic_civic:0 "§HFeature civic§!: This civic provides a specific mechanic or unique play-style"
 	tec_tooltip_regular_leader_civic:0 "§HLeader civic§!: This civic alters some of the aspects of your rulers§!"
 	tec_tooltip_regular_challenge_civic:0 "§HChallenging civic§!: This civic provide a challenge offset by specific bonuses§!"
+
+	tec_tooltip_not_origin_civic:0 "£trigger_no£ §RRequires not having any ['concept_tec_origin_civic'].§!"
+	tec_tooltip_not_foundation_civic:0 "£trigger_no£ §RRequires not having any ['concept_tec_foundation_civic']§!"
  # /
 
  # --------------- Hive
@@ -178,20 +181,20 @@
 # Ascension tied
  # --------------- Psionic
 	civic_tec_foundation_psionic:0 "§B§!Shroud Tainted"
-	civic_tec_foundation_psionic_desc:0 "TO DO"
-	civic_tec_foundation_psionic_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_psionic_desc:0 "§E['concept_tec_foundation_civic']§!\n\nThis civilization was exposed early on its development to intense trans-dimensional psionic energies, radically altering its species capabilities and awakening uncontrollable powers."
+	civic_tec_foundation_psionic_tooltip:0 "TO DO"
 	# Starts with psionic, but at a weakened state
 	# Bad things happen
  # --------------- Psychic
 	civic_tec_foundation_psychic:0 "§B§!Out-expanding Psyche"
-	civic_tec_foundation_psychic_desc:0 "TO DO"
-	civic_tec_foundation_psychic_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_psychic_desc:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_psychic_tooltip:0 "TO DO"
 	# Starts with psychic, but madness is rampant
 	# Bad things happen
  # --------------- Genetic
 	civic_tec_foundation_genetic:0 "§B§!Attempted Perfection"
-	civic_tec_foundation_genetic_desc:0 "TO DO"
-	civic_tec_foundation_genetic_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_genetic_desc:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_genetic_tooltip:0 "TO DO"
 	# Starts with a weakened genetic perfection trait
 	# Bad things happen
  # --------------- Biological
@@ -200,27 +203,27 @@
 	civic_tec_foundation_fleshcrafters_tooltip:0 "TO DO"
 
 	civic_tec_foundation_biological:0 "§B§!Mutagenic Biology"
-	civic_tec_foundation_biological_desc:0 "TO DO"
-	civic_tec_foundation_biological_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_biological_desc:0 "§E['concept_tec_foundation_civic']§!\n\nThe genetic basis of this civilization is highly unstable and malleable, leading to highly adaptable and mutable breeds, even able to inherit desirable traits from other species."
+	civic_tec_foundation_biological_tooltip:0 "TO DO"
 	# Starts mutated by biogenics, but weakened
 	# Bad things happen
  # --------------- Cybernetics
 	civic_tec_foundation_cybernetic:0 "§B§!Premature Augmentation"
-	civic_tec_foundation_cybernetic_desc:0 "TO DO"
-	civic_tec_foundation_cybernetic_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_cybernetic_desc:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_cybernetic_tooltip:0 "TO DO"
 	# Starts with non upgraded cybernetic and access to some cybernetic traits
 	# Events through of radicals
  # --------------- Synthetics
 	civic_tec_foundation_synthetic:0 "§B§!Illustrated Transubstantiation"
-	civic_tec_foundation_synthetic_desc:0 "TO DO"
-	civic_tec_foundation_synthetic_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_synthetic_desc:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_synthetic_tooltip:0 "TO DO"
 	# Starts with less pops and being synth
 	# Remaining population is not happy
 	# Cybermen influence
  # --------------- Replicants
 	civic_tec_foundation_replicants:0 "§B§!Transorganic Inventive"
-	civic_tec_foundation_replicants_desc:0 "TO DO"
-	civic_tec_foundation_replicants_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_replicants_desc:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
+	civic_tec_foundation_replicants_tooltip:0 "TO DO"
 	# Starts with a third of the population being replicants that can't be reproduced
 	# Starts with a replicant production center
 	# Blade runner, carbon copy
