--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -104,7 +104,7 @@ TEC_TAG_BONUS: "§HBonus:§!"
   TEC_AUTH_TEC_HIVE_CYBERNETIC_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
 
   auth_machine_intelligence:0 "Machine Intelligence"
-  auth_machine_intelligence_desc:1 "Machine Intelligences are immense artificial group minds that have been networked into a single conscious entity. Most of the actual "population" in such an empire consists of mindless work units who perform their designated tasks without any semblance of free will.\n\nA small number of semi-autonomous agents are typically employed for more specialized tasks that benefit from some degree of independent initiative."
+  auth_machine_intelligence_desc:1 "Machine Intelligences are immense artificial group minds that have been networked into a single conscious entity. Most of the actual ''population'' in such an empire consists of mindless work units who perform their designated tasks without any semblance of free will.\n\nA small number of semi-autonomous agents are typically employed for more specialized tasks that benefit from some degree of independent initiative."
 
   TEC_AUTH_MACHINE_INTELLIGENCE_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_machine_type']\n"
 
@@ -521,7 +521,7 @@ TEC_TAG_BONUS: "§HBonus:§!"
 	ethic_gestalt_disregard:0 "Overconsumption"
 	ethic_gestalt_overconsumption:0 "Overconsumption"
 	ethic_gestalt_overconsumption_plural:0 "Overconsumption"
-	ethic_gestalt_overconsumption_minor:0 "Overconsuming"
+	ethic_gestalt_overconsumption_minor:0 "overconsuming"
 	ethic_gestalt_overconsumption_minor_plural:0 "overconsuming"
 	ethic_gestalt_overconsumption_adj:0 "Overconsuming"
 	ethic_gestalt_overconsumption_adj_minor:0 "overconsuming"
@@ -530,11 +530,21 @@ TEC_TAG_BONUS: "§HBonus:§!"
 
 #curious
 	ethic_gestalt_extrospective:0 "Extrospective"
+	ethic_gestalt_extrospective_plural:0 "Extrospective"
+	ethic_gestalt_extrospective_minor:0 "extrospective"
+	ethic_gestalt_extrospective_minor_plural:0 "extrospective"
+	ethic_gestalt_extrospective_adj:0 "Extrospection"
+	ethic_gestalt_extrospective_adj_minor:0 "extrospection"
 	ethic_gestalt_extrospective_desc:0 "§BGestalt Discovery Motivation§!\n\n§HBuildings dedicated to improve the empire research will also generate a small amount of amenities.§!\n\n§LThis gestalt consciousness constantly search new experiences and ways of understanding the universe as a whole driven by curiosity and hunger for knowledge around it's reach.§!" 
 	#ethic_gestalt_extrospective_desc:0 "§BGestalt Discovery Motivation§!\n\n§REffect not implemented,	ethic is buffed.§!\n\n§HExtra special anomalies and events can appear while researching and probing systems, and some colonized systems can be ''rediscovered'', searching for extra rarities.§!\n\n§LThis gestalt consciousness constantly search new experiences and ways of understanding the universe as a whole driven by curiosity and hunger for knowledge around it's reach.§!" 
 
 #inwards
 	ethic_gestalt_introspective:0 "Introspective"
+	ethic_gestalt_introspective_plural:0 "Introspective"
+	ethic_gestalt_introspective_minor:0 "introspective"
+	ethic_gestalt_introspective_minor_plural:0 "introspective"
+	ethic_gestalt_introspective_adj:0 "Introspection"
+	ethic_gestalt_introspective_adj_minor:0 "introspection"
 	ethic_gestalt_introspective_desc:0 "§BGestalt Ego Motivation§!\n\n§HBuildings dedicated to produce unity will decrease the upkeep of the drones on the planet.§!\n\n§LThis gestalt consciousness has a true deep understanding of it's own deep and self, and constantly search ways of improving by analyzing it's own foundation and goals.§!" 
 
 
