--- a/localisation/english/zz_evolved_crisis_l_english.yml
+++ b/localisation/english/zz_evolved_crisis_l_english.yml
@@ -85,3 +85,46 @@
 # --------------------------- Codename PRO --------------------------------
 # The protocol
 # We know what you are, what you already was, and we know oblivion awaits what you will be
+ tec_crisis_protocol.100.name:0 "Stranded Signal"
+ tec_crisis_protocol.100.desc:0 "To Do."
+ tec_crisis_protocol.100.a:0 "Curious"
+ tec_crisis_protocol.100.a.tooltip:0 "TO DO"
+
+ tec_crisis_protocol.10001.name:0 "Stranded Signal"
+ tec_crisis_protocol.10001.desc:0 "To Do."
+ tec_crisis_protocol.10001.a:0 "Trace its origin!"
+ tec_crisis_protocol.10001.a.tooltip:0 "TO DO"
+ tec_crisis_protocol.10001.b:0 "We have no time for this."
+ tec_crisis_protocol.10001.b.tooltip:0 "TO DO"
+
+ tec_crisis_protocol.10002.name:0 "Parallel Connection"
+ tec_crisis_protocol.10002.desc:0 "To Do."
+ tec_crisis_protocol.10002.a:0 "Concerning"
+ tec_crisis_protocol.10002.a.tooltip:0 "TO DO"
+ tec_crisis_protocol.10002.b:0 "We have no time for this."
+ tec_crisis_protocol.10002.b.tooltip:0 "TO DO"
+
+ tec_crisis_protocol.10003.name:0 "It Learns"
+ tec_crisis_protocol.10003.desc:0 "To Do."
+ tec_crisis_protocol.10003.a:0 "Concerning"
+ tec_crisis_protocol.10003.a.tooltip:0 "TO DO"
+ tec_crisis_protocol.10003.b:0 "We have no time for this."
+ tec_crisis_protocol.10003.b.tooltip:0 "TO DO"
+
+ tec_crisis_protocol.10004.name:0 "Digital Chaos"
+ tec_crisis_protocol.10004.desc:0 "To Do."
+ tec_crisis_protocol.10004.a:0 "Concerning"
+ tec_crisis_protocol.10004.a.tooltip:0 "TO DO"
+ tec_crisis_protocol.10004.b:0 "We have no time for this."
+ tec_crisis_protocol.10004.b.tooltip:0 "TO DO"
+
+ tec_crisis_protocol.10005.name:0 "Without a Trace"
+ tec_crisis_protocol.10005.desc:0 "To Do."
+ tec_crisis_protocol.10005.a:0 "Concerning"
+ tec_crisis_protocol.10005.a.tooltip:0 "TO DO"
+ tec_crisis_protocol.10005.b:0 "We have no time for this."
+ tec_crisis_protocol.10005.b.tooltip:0 "TO DO"
+
+# --------------------------- Codename CYB --------------------------------
+# Cyberocrats
+# We know what you are, what you already was, and we know oblivion awaits what you will be
